--- a/css/ranjanis-superb-site.webflow.css
+++ b/css/ranjanis-superb-site.webflow.css
@@ -5,7 +5,15 @@
   --copy-grey: #747474;
   --silver: #c8c8ca;
   --misty-rose: #dfd7d4;
+  --sun: #ffc61a;
   --antique-white: #e4d7c9;
+}
+
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .w-layout-grid {
@@ -15,13 +23,6 @@
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
-}
-
-.w-layout-blockcontainer {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
 }
 
 @media screen and (max-width: 991px) {
@@ -224,7 +225,7 @@ figure {
 }
 
 .title1 {
-  font-size: 4.25em;
+  font-size: 3.5em;
   font-weight: 600;
   line-height: 1.1;
 }
@@ -3101,6 +3102,213 @@ figure {
   font-weight: 400;
 }
 
+.grid-4, .grid-5 {
+  grid-template: "Area"
+  / 1fr 1fr 1fr 1fr 1fr;
+}
+
+.concept-grid {
+  width: 100%;
+  grid-row-gap: 4em;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 4em;
+  display: flex;
+}
+
+.heading-huge {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 4vh;
+  font-size: 7.5em;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.project-image-hover-text-loop {
+  z-index: 11;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  overflow: hidden;
+  transform: translate(0, -50%);
+}
+
+.concept-tag-text {
+  color: var(--text-dark);
+  font-size: 22px;
+}
+
+.concept-project-container {
+  width: 16.5em;
+  height: 21em;
+}
+
+.concept-project-container.project-thin-block {
+  justify-content: flex-start;
+  padding: 0;
+  text-decoration: none;
+  display: flex;
+  position: relative;
+}
+
+.concept-project-container.project-thin-block.concept-tight-offset-top {
+  margin-top: -2rem;
+}
+
+.concept-project-container.concepts-wide-column {
+  width: 20em;
+  height: 16em;
+  padding: 0;
+  position: relative;
+}
+
+.client-paragraph {
+  width: 70%;
+  text-align: center;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.4em;
+  line-height: 1.5;
+  display: flex;
+}
+
+.client-paragraph.concepts {
+  display: block;
+}
+
+.tabs-content {
+  height: auto;
+}
+
+.container-concepts {
+  width: 100%;
+  max-width: 2560px;
+}
+
+.all-projects-tab-menu {
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+}
+
+.section-3 {
+  z-index: 20;
+  width: 100%;
+  height: auto;
+  max-width: 1500px;
+  min-height: auto;
+  min-width: 100%;
+  padding: 0 0%;
+  position: relative;
+}
+
+.section-3.concepts-section {
+  height: auto;
+  max-width: 2500px;
+  padding: 5em 8.33% 3em;
+  font-size: 2.06vw;
+  font-weight: 400;
+}
+
+.concept-filter-button {
+  width: 200px;
+  height: 45px;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #ffd148;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1em;
+  font-size: .8em;
+  display: flex;
+}
+
+.concept-filter-button.w--current {
+  width: 200px;
+  height: 45px;
+  color: #fff;
+  background-color: #ffd148;
+  border: 0 solid #8c8c8c;
+  border-radius: 8px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1em;
+  font-size: .8em;
+  display: flex;
+}
+
+.concept-image {
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  object-fit: cover;
+}
+
+.text-block-11 {
+  color: var(--sun);
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26.4px;
+}
+
+.heading-6 {
+  font-size: 44px;
+  line-height: 52.8px;
+}
+
+.grid-6 {
+  width: 100%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template: "Area"
+                 "."
+                 "."
+                 / 1fr 1fr 1fr 1fr;
+}
+
+.airport {
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.image-18 {
+  width: 100%;
+  box-shadow: -2px 1px 4px rgba(0, 0, 0, .28);
+}
+
+.outstation {
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.local {
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.tab-pane-exterior {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 @media screen and (max-width: 991px) {
   body {
     font-size: .87rem;
@@ -3373,6 +3581,49 @@ figure {
 
   .comp-pane.right {
     width: 60%;
+  }
+
+  .grid-4 {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .image-17 {
+    width: 300px;
+  }
+
+  .grid-5 {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .client-paragraph {
+    font-size: 1.4rem;
+    display: flex;
+  }
+
+  .all-projects-tab-menu {
+    margin-bottom: 2rem;
+  }
+
+  .section-3 {
+    height: auto;
+    padding-top: 7.5rem;
+    padding-bottom: 5rem;
+    overflow: hidden;
+  }
+
+  .grid-6 {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
   }
 }
 
@@ -3940,6 +4191,67 @@ figure {
     width: 80%;
     margin-top: -100px;
   }
+
+  .grid-4, .grid-5 {
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1fr;
+  }
+
+  .concept-tag-text {
+    font-size: .8rem;
+  }
+
+  .concept-project-container.project-thin-block {
+    width: 100%;
+    height: 40rem;
+    margin-bottom: 2rem;
+  }
+
+  .concept-project-container.project-thin-block.concept-tight-offset-top {
+    margin-top: 0;
+  }
+
+  .concept-project-container.concepts-wide-column {
+    width: 100%;
+    height: 40rem;
+    margin-bottom: 2rem;
+  }
+
+  .client-paragraph {
+    text-align: justify;
+    font-size: 1.3rem;
+  }
+
+  .client-paragraph.concepts {
+    text-align: center;
+  }
+
+  .tabs-content {
+    display: block;
+  }
+
+  .all-projects-tab-menu {
+    margin-bottom: 2rem;
+  }
+
+  .tabs {
+    display: block;
+  }
+
+  .concept-filter-button, .concept-filter-button.w--current {
+    height: 40px;
+    border-radius: 8px;
+    font-size: .8rem;
+  }
+
+  .grid-6 {
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1fr;
+  }
+
+  .bold-text, .bold-text-2, .bold-text-3 {
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -4184,17 +4496,174 @@ figure {
     margin-top: 0;
     padding: 30px;
   }
+
+  .image-17 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .heading-huge {
+    font-size: 3.2rem;
+  }
+
+  .concept-tag-text {
+    font-size: .8rem;
+  }
+
+  .concept-project-container.project-thin-block {
+    height: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .concept-project-container.project-thin-block.concept-tight-offset-top {
+    height: 100%;
+    margin-top: 0;
+  }
+
+  .concept-project-container.concepts-wide-column {
+    height: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .client-paragraph {
+    font-size: 1.3rem;
+  }
+
+  .all-projects-tab-menu {
+    flex-wrap: wrap;
+    align-content: stretch;
+    margin-bottom: 2rem;
+  }
+
+  .section-3 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .concept-filter-button {
+    width: 125px;
+    height: 40px;
+    border-radius: 8px;
+    padding-left: 0;
+    padding-right: 0;
+    font-size: .8rem;
+  }
+
+  .concept-filter-button.w--current {
+    width: 125px;
+    height: 40px;
+    text-align: center;
+    border-radius: 8px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .airport, .outstation, .local {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .bold-text, .bold-text-2, .bold-text-3 {
+    font-size: 14px;
+  }
 }
 
-#w-node-e8ac114f-8260-de0b-258a-9bd5aa6fc15b-1b6e5c97, #w-node-_098fcfbb-53f5-5030-2eef-9b80a2aff7b7-1b6e5c97, #w-node-_7d61aedc-e8cc-41cc-edfa-769f04d8551e-1b6e5c97 {
+#w-node-_9eab7911-e047-9d5d-5f7b-eb7a45082a4f-1b6e5c97 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#w-node-fb50e7db-ef50-2a51-f0c0-c1e65e3f0db2-1b6e5c97 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-c54e1647-7853-503a-8260-8756fc9d1fa5-1b6e5c97 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-_2e6eda00-79cd-4a74-dd7c-c8e34af0947c-1b6e5c97 {
+  grid-area: 1 / 4 / 2 / 5;
+}
+
+#w-node-de3daf57-53ae-8343-9cbc-9d85113b61ba-1b6e5c97 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#w-node-_020f4860-0b06-5326-b045-91de55fd34d7-1b6e5c97 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#w-node-_7d272c08-cda7-cfef-d1cb-a1fd060b7636-1b6e5c97 {
+  grid-area: 2 / 3 / 3 / 4;
+}
+
+#w-node-_1cab08ac-8e9c-af86-4ccc-d194d6c09d4e-1b6e5c97 {
+  grid-area: 2 / 4 / 3 / 5;
+}
+
+#w-node-a138367f-bfad-beaf-271d-ff2bde5fc7cc-1b6e5c97 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
-#w-node-a1a0b637-173a-a14a-1a58-d334ff08d28f-1b6e5c97 {
-  grid-area: Area;
+#w-node-f216deb5-9ad0-13fd-6967-a44211485173-1b6e5c97 {
+  grid-area: 1 / 1 / 2 / 2;
 }
 
-#w-node-_58da33ac-4d9d-1fc7-9149-3cd30b71457f-1b6e5c97 {
+#w-node-f216deb5-9ad0-13fd-6967-a44211485174-1b6e5c97 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-f216deb5-9ad0-13fd-6967-a44211485175-1b6e5c97 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-f216deb5-9ad0-13fd-6967-a44211485176-1b6e5c97 {
+  grid-area: 1 / 4 / 2 / 5;
+}
+
+#w-node-f216deb5-9ad0-13fd-6967-a44211485177-1b6e5c97 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#w-node-f216deb5-9ad0-13fd-6967-a44211485178-1b6e5c97 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#w-node-f216deb5-9ad0-13fd-6967-a44211485179-1b6e5c97 {
+  grid-area: 2 / 3 / 3 / 4;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1e9-1b6e5c97 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ea-1b6e5c97 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1eb-1b6e5c97 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ec-1b6e5c97 {
+  grid-area: 1 / 4 / 2 / 5;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ed-1b6e5c97 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ee-1b6e5c97 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ef-1b6e5c97 {
+  grid-area: 2 / 3 / 3 / 4;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1f0-1b6e5c97 {
+  grid-area: 2 / 4 / 3 / 5;
+}
+
+#w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1f1-1b6e5c97 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
@@ -4205,6 +4674,72 @@ figure {
 
 #w-node-_55aabda7-d4f5-6284-ac28-41865ed1546a-1b6e5c97, #w-node-_55aabda7-d4f5-6284-ac28-41865ed1547e-1b6e5c97 {
   grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+@media screen and (max-width: 479px) {
+  #w-node-_2e6eda00-79cd-4a74-dd7c-c8e34af0947c-1b6e5c97 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  #w-node-de3daf57-53ae-8343-9cbc-9d85113b61ba-1b6e5c97 {
+    grid-column: 2 / 3;
+  }
+
+  #w-node-_020f4860-0b06-5326-b045-91de55fd34d7-1b6e5c97 {
+    grid-column: 3 / 4;
+  }
+
+  #w-node-_7d272c08-cda7-cfef-d1cb-a1fd060b7636-1b6e5c97 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  #w-node-_1cab08ac-8e9c-af86-4ccc-d194d6c09d4e-1b6e5c97 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  #w-node-a138367f-bfad-beaf-271d-ff2bde5fc7cc-1b6e5c97 {
+    grid-area: 3 / 3 / 4 / 4;
+  }
+
+  #w-node-f216deb5-9ad0-13fd-6967-a44211485176-1b6e5c97 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  #w-node-f216deb5-9ad0-13fd-6967-a44211485177-1b6e5c97 {
+    grid-column: 2 / 3;
+  }
+
+  #w-node-f216deb5-9ad0-13fd-6967-a44211485178-1b6e5c97 {
+    grid-column: 3 / 4;
+  }
+
+  #w-node-f216deb5-9ad0-13fd-6967-a44211485179-1b6e5c97 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ec-1b6e5c97 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ed-1b6e5c97 {
+    grid-column: 2 / 3;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ee-1b6e5c97 {
+    grid-column: 3 / 4;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1ef-1b6e5c97 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1f0-1b6e5c97 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  #w-node-c635ae42-d8ef-e8af-ae15-97f323aeb1f1-1b6e5c97 {
+    grid-area: 3 / 3 / 4 / 4;
+  }
 }
 
 
